--- a/01.04-putting-it-together/01.04.05b-adding-contact-form-challenge-solution/index.html
+++ b/01.04-putting-it-together/01.04.05b-adding-contact-form-challenge-solution/index.html
@@ -213,7 +213,7 @@
                         <textarea class="form-control" id="message" rows="3"></textarea>
                     </div>
                     <div class="col-12">
-                        <button type="submit" class="btn btn-primary custom-button">Send</button>
+                        <button type="submit" class="btn btn-primary">Send</button>
                     </div>
                 </form>
             </div>
