--- a/01.04-putting-it-together/01.04.06-adding-a-model-solution-code/index.html
+++ b/01.04-putting-it-together/01.04.06-adding-a-model-solution-code/index.html
@@ -217,7 +217,7 @@
                         <textarea class="form-control" id="message" rows="3"></textarea>
                     </div>
                     <div class="col-12">
-                        <button type="submit" class="btn btn-primary custom-button">Send</button>
+                        <button type="submit" class="btn btn-primary">Send</button>
                     </div>
                 </form>
             </div>
