--- a/01.05-customising-the-portfolio-site/01.05.02-enhancing-bootstrap-styles-and-organising-css/index.html
+++ b/01.05-customising-the-portfolio-site/01.05.02-enhancing-bootstrap-styles-and-organising-css/index.html
@@ -164,11 +164,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- 
-                mb-4 adds margin to the bottom of the last portfolio column, 
-                allowing for extra spacing at the bottom of the portfolio section 
-              -->
-                <div class="col-12 col-md-6 mb-4">
+               <div class="col-12 col-md-6">
                     <div class="card mb-3">
                         <img src="assets/images/bmi-calculator.webp" class="card-img-top"
                             alt="Weighing scales seen from the first person view of the person standing on the scales">
