Format html files

--- a/01.05-customising-the-portfolio-site/01.05.04-challenge-solution/index.html
+++ b/01.05-customising-the-portfolio-site/01.05.04-challenge-solution/index.html
@@ -63,7 +63,8 @@
                 <!-- mb-5 gives extra margin spacing under lead text -->
                 <p class="lead mb-5">Let's create something amazing together!</p>
                 <!-- Bootstrap modal button -->
-                <button type="button" class="btn btn-primary  sharp-corners custom-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button type="button" class="btn btn-primary  sharp-corners custom-button" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
                     Subscribe to my newsletter!
                 </button>
             </div>
@@ -164,7 +165,7 @@
                         </div>
                     </div>
                 </div>
-               <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6">
                     <div class="card mb-3 sharp-corners">
                         <img src="assets/images/bmi-calculator.webp" class="card-img-top"
                             alt="Weighing scales seen from the first person view of the person standing on the scales">
